cmake doesnt configure on github build agent
-- Detecting CXX compile features - done
24
CMake Error at /usr/local/share/cmake-3.28/Modules/FindPackageHandleStandardArgs.cmake:230 (message):
25
  Could NOT find OpenGL (missing: OPENGL_opengl_LIBRARY OPENGL_glx_LIBRARY
26
  OPENGL_INCLUDE_DIR)
27
Call Stack (most recent call first):
28
  /usr/local/share/cmake-3.28/Modules/FindPackageHandleStandardArgs.cmake:600 (_FPHSA_FAILURE_MESSAGE)
29
  /usr/local/share/cmake-3.28/Modules/FindOpenGL.cmake:545 (FIND_PACKAGE_HANDLE_STANDARD_ARGS)
30
  CMakeLists.txt:45 (find_package)
31
-- Configuring incomplete, errors occurred!
32
Error: Process completed with exit code 1.
Build with Ninja

--- a/.github/workflows/code_coverage.yml
+++ b/.github/workflows/code_coverage.yml
@@ -17,6 +17,8 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get install -y cmake ninja-build \
+          libxrandr-dev libxinerama-dev \
+          libxcursor-dev libxi-dev libgl1-mesa-dev \
           gcovr lcov
 
 # Do we need a very modern compiler?
