--- a/.github/workflows/code_coverage.yml
+++ b/.github/workflows/code_coverage.yml
@@ -56,6 +56,11 @@ jobs:
       run: |
         ninja -C build test
 
+    - name: Configure lcov to capture branch coverage
+      run: |
+        cp /etc/lcovrc /dev/shm
+        cat /dev/shm/lcovrc |sed  's/branch_coverage = 0/branch_coverage = 1/g' > /etc/lcovrc
+
     - name: Collect coverage
       run: |
         ninja -C build cov
