--- a/.github/workflows/code_coverage.yml
+++ b/.github/workflows/code_coverage.yml
@@ -59,7 +59,7 @@ jobs:
     - name: Configure lcov to capture branch coverage
       run: |
         cp /etc/lcovrc /dev/shm
-        cat /dev/shm/lcovrc |sed  's/branch_coverage = 0/branch_coverage = 1/g' > /etc/lcovrc
+        cat /dev/shm/lcovrc |sed  's/branch_coverage = 0/branch_coverage = 1/g' > ~/.lcovrc
 
     - name: Collect coverage
       run: |
